映射类型泛型调整和将抽象类从impl模块迁移到interface模块